styles/Resume.css
.heading-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 0 50px;
}
.screen-sub-heading {
  letter-spacing: 3px;
  margin: 8px 0 10px;
  font-size: 12px;
  color: var(--black);
}
.screen-heading {
  font-size: 32px;
  color: #1f2235;
  font-family: 'Poppins Bold';
}
.heading-seperator {
  display: flex;
  align-items: center;
  position: relative;
  width: 180px;
  margin: 10px 0 0;
}
.seperator-line {
  width: 100%;
  height: 2px;
  background-color: #1f221f;
}
.seperator-blob {
  height: 10px;
  width: 100%;
  position: absolute;
  display: flex;
  justify-content: center;
}
.seperator-blob div {
  width: 35px;
  border-radius: 10px;
  background-color: var(--dark-orange);
}
.resume-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  margin: -50px 0;
  background-color: var(--white);
}
.resume-card {
  display: flex;
  height: 360px;
  width: 1000px;
  margin-bottom: 80px;
}
.resume-bullets {
  box-shadow: 15px 0 9px -15px #1f2235;
  height: 100%;
  width: 320px;
}
.resume-bullet-details {
  flex-grow: 1;
  width: 600px;
  overflow-y: scroll;
  padding: 0 0 0 80px;
}
.experience-description {
  margin: 10px 0 0;
  text-align: justify;
  margin-bottom: 10px;
}
.resume-description-text {
  font-size: 12px;
}
.resume-details-carousal {
  animation: fadeInAnimation 2s;
}
@keyframes fadeInAnimation {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.bullet-container {
  display: flex;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
}
.bullets {
  width: 86%;
  position: relative;
  z-index: 2;
}
.bullet {
  display: flex;
  align-items: center;
  cursor: pointer;
  background-color: #1f2235;
  height: 40px;
  margin: 15px 0;
  padding: 0 8px;
  border-radius: 20px;
  width: 30px;
  transition: width 0.6s ease;
}
.bullet-label {
  font-size: 14px;
  white-space: nowrap;
  font-family: 'Poppins SemiBold';
}
.bullet-logo {
  height: 16px;
  margin: 0 30px 0 0;
}
.bullet-icons {
  width: 34px;
  height: 100%;
  z-index: 1;
  background-color: #1f2235;
  position: absolute;
}
.selected-bullet {
  color: var(--white);
  width: 100%;
}
.resume-screen-container {
  justify-content: space-evenly;
  width: 100%;
}
.resume-heading,
.resume-screen-container {
  display: flex;
  flex-direction: column;
}
.resume-main-heading {
  position: relative;
  display: flex;
  justify-content: space-between;
}
.resume-main-heading span {
  color: var(--dark-orange);
  font-size: 16px;
  font-family: 'Poppins SemiBold';
  margin-bottom: 15px;
}
.experience-description {
  max-width: 100%;
}
.heading-bullet {
  position: absolute;
  left: -30px;
  height: 15px;
  width: 15px;
  top: 5px;
  border-radius: 50%;
  background-color: #ff5823;
}
.resume-sub-heading {
  font-size: 13px;
  font-family: 'Poppins SemiBold';
  color: var(--black);
  margin: -5px 5px 0px;
}
.resume-heading-description {
  font-size: 12px;
  text-align: justify;
  margin: -5px 15px 15px;
}
.heading-date {
  background-color: #ff5823;
  padding: 4px 12px;
  font-size: 14px;
  border-radius: 14px;
  color: var(--white);
  width: 117px;
  height: 27px;
}
.skill-parent {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 50%;
}
.programming-skills-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}
.skill-percentage {
  position: relative;
  height: 15px;
  width: 70%;
  background-color: #ff5823;
  
    margin-bottom: 25px;
}
.skill-percentage .active-percentage-bar {
  height: 15px;
  transition: 0.8s ease;
  position: absolute;
  background-color: #1f2235;
}
.skill-parent span {
  font-family: 'Poppins Bold';
  font-size: 16px;
  color: #ff5823;
}
.resume-content {
  margin-top: 40px;
}
@media only screen and (max-width: 1110px) {
  .resume-card {
    width: 880px;
  }
  .resume-bullet-details {
    padding: 0 0 0 70px;
  }
}
@media only screen and (max-width: 1023px) {
  .resume-content {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .bullets {
    width: 90%;
  }
  .heading-bullet{
    left:-999px
  }
  .resume-card {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    display: flex;
    flex-direction: column;
    margin: 30px 0;
    align-items: center;
    width: 90%;
  }
  .resume-bullet-details {
    height: 360px;
    padding: 0;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
  }
  .resume-bullets {
    margin: 30px 0;
    width: 100%;
  }
  .selected-bullet {
    width: 100%;
  }
}

